Revise README for DeyLauncher updates and features
Updated README to reflect new features, fixes, and project status.